inserted path to lab after cloning (for folder visualization)

--- a/online-use-cases.html
+++ b/online-use-cases.html
@@ -142,7 +142,7 @@
     <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1" data-parent="#accordionEx">
       <div class="card-body">
           <p><a target="_blank" href="https://hbp-bsp-hhnb.cineca.it/efelg/">Feature Extraction</a></p>
-          <p><a target="_blank" href="https://lab.ebrains.eu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fcnr-ibf-pa%2Fhbp-bsp-jupyter-notebooks&urlpath=tree%2Fhbp-bsp-jupyter-notebooks%2F.&branch=master">Single Cell Building/Plasticity Notebook</a></p>
+          <p><a target="_blank" href="https://lab.ebrains.eu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fcnr-ibf-pa%2Fhbp-bsp-jupyter-notebooks&urlpath=lab/workspaces/%2Fhbp-bsp-jupyter-notebooks%2F.&branch=master">Single Cell Building/Plasticity Notebook</a></p>
 
       </div>
     </div>
