added partners' logos

--- a/index.html
+++ b/index.html
@@ -663,52 +663,88 @@
 
                         <!-- Team Member -->
                         <div class="team-member">
+                        <a href="https://www.cnr.it" target="_blank" data-toggle="tooltip" data-placement="top" title="CONSIGLIO NAZIONALE DELLE RICERCHE">
                             <div class="image-wrapper">
                                 <img class="img-fluid" src="images/logos/CNR.svg" alt="alternative">
-                            </div> <!-- end of image-wrapper -->
+                            </div><!-- end of image-wrapper -->
+                        </a>
+                            <!--
                             <p class="p-large">CONSIGLIO NAZIONALE DELLE RICERCHE</p>
-                            </span>
-                        </div> <!-- end of team-member -->
-                        <!-- end of team member -->
+                            -->
+                        </div>
+                        <!-- end of team-member -->
                         <!-- Team Member -->
                         <div class="team-member">
+                        <a href="https://www.kth.se/" target="_blank" data-toggle="tooltip" data-placement="top" title="KUNGLIGA TEKNISKA HÖGSKOLAN">
                             <div class="image-wrapper">
                                 <img class="img-fluid" src="images/logos/KTH.svg" alt="alternative">
-                            </div> <!-- end of image-wrapper -->
+                            </div><!-- end of image-wrapper -->
+                            </a>
+                            <!--
                             <p class="p-large">KUNGLIGA TEKNISKA HÖGSKOLAN</p>
-                            </span>
-                        </div> <!-- end of team-member -->
+                            -->
+                        </div><!-- end of team-member -->
                         <!-- end of team member -->
                         <!-- Team Member -->
                         <div class="team-member">
+                        <a href="https://www.epfl.ch/en/" target="_blank" data-toggle="tooltip" data-placement="top" title="ÉCOLE POLYTECHNIQUE FÉDÉRALE DE LAUSANNE">
                             <div class="image-wrapper">
                                 <img class="img-fluid" src="images/logos/EPFL.svg" alt="alternative">
-                            </div> <!-- end of image-wrapper -->
+                            </div><!-- end of image-wrapper -->
+                            </a>
+                            <!--
                             <p class="p-large">ÉCOLE POLYTECHNIQUE FÉDÉRALE DE LAUSANNE</p>
-                            </span>
+                            -->
+                        </div><!-- end of team-member -->
+                        <!-- end of team member -->
+                        <!-- Team Member -->
+                        <div class="team-member">
+                        <a href="https://web.unipv.it/" target="_blank" data-toggle="tooltip" data-placement="top" title="UNIVERSITÀ DEGLI STUDI DI PAVIA">
+                            <div class="image-wrapper">
+                                <img class="img-fluid" src="images/logos/UNIPV.svg" alt="alternative">
+                            </div><!-- end of image-wrapper -->
+                            </a>
+                            <!--
+                            <p class="p-large">UNIVERSITÀ DEGLI STUDI DI PAVIA</p>
+                            -->
+                        </div><!-- end of team-member -->
+                        <!-- end of team member -->
+                        <!-- Team Member -->
+                        <div class="team-member">
+                        <a href="https://www.fz-juelich.de/portal/EN/Home/home_node.html" target="_blank" data-toggle="tooltip" data-placement="top" title="J&#220LICH FORSCHUNGSZENTRUM">
+                            <div class="image-wrapper">
+                                <img class="img-fluid" src="images/logos/JUELICH.svg" alt="alternative">
+                            </div><!-- end of image-wrapper -->
+                            </a>
+                            <!--
+                            <p class="p-large">J&#220LICH FORSCHUNGSZENTRUM</p>
+                            -->
                         </div> <!-- end of team-member -->
                         <!-- end of team member -->
                         <!-- Team Member -->
                         <div class="team-member">
+                        <a href="https://ethz.ch/en.html" target="_blank" data-toggle="tooltip" data-placement="top" title="ETH Z&#252rich">
                             <div class="image-wrapper">
-                                <img class="img-fluid" src="images/logos/UNIPV.svg" alt="alternative">
+                                <img class="img-fluid" src="images/logos/ETHZ.svg" alt="alternative">
                             </div> <!-- end of image-wrapper -->
-                            <p class="p-large">UNIVERSITÀ DEGLI STUDI DI PAVIA</p>
-                            </span>
-                        </div> <!-- end of team-member -->
+                            </a>
+                            <!--
+                            <p class="p-large">ETH Z&#252rich</p><br>
+                            -->
+                        </div><!-- end of team-member -->
                         <!-- end of team member -->
 
                     </div> <!-- end of col -->
-                </div> <!-- end of row -->
-            </div> <!-- end of container -->
-        </div> <!-- end of basic-2 -->
+                </div><!-- end of row -->
+            </div><!-- end of container -->
+        </div><!-- end of basic-2 -->
         <!-- end of team -->
 
 
         <!-- Contact -->
         <div id="contact" class="form-2">
             <div class="container">
-                <div style="text-align:right" class="text-container center-btn-cont">    
+                <div style="text-align:right" class="text-container center-btn-cont">
                     <div class="sep-bar sb-green"></div>
                 </div>
                 <div class="row">
