changed portal name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- SEO Meta Tags -->
-        <meta name="description" content="EBRAINS - Simulation Cellular Level">
+        <meta name="description" content="EBRAINS - Cellular Level 
+            Simulation Platform">
         <meta name="author" content="Inovatik">
 
         <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
@@ -18,7 +19,7 @@
         <meta property="og:type" content="article" />
 
         <!-- Website Title -->
-        <title>EBRAINS - Simulation Cellular Level</title>
+        <title>EBRAINS - Cellular Level Simulation Platform</title>
 
         <!-- Styles -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -116,7 +117,7 @@
                         <div class="col-lg-12">
                             <div class="text-container">
                                 <p class="p-x-large">EBRAINS</p><!--<span id="js-rotating"></span></h1>-->
-                                <h1>SIMULATION - Cellular Level</h1>
+                                <h1>Cellular Level Simulation Platform</h1>
                                 <br>
                                 <br>
                                 <p class="p-heading p-x-large"><span id="js-rotating">Build, Reconstruct, Simulate</span>
