--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <!-- SEO Meta Tags -->
         <meta name="description" content="EBRAINS - Cellular Level 
-                    Simulation Platform">
+                    Simulation">
         <meta name="author" content="Inovatik">
 
         <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
@@ -19,7 +19,7 @@
         <meta property="og:type" content="article" />
 
         <!-- Website Title -->
-        <title>EBRAINS - Cellular Level Simulation Platform</title>
+        <title>EBRAINS - Cellular Level Simulation</title>
 
         <!-- Styles -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -124,7 +124,7 @@
                         <div class="col-lg-12">
                             <div class="text-container">
                                 <p class="p-x-large">EBRAINS</p><!--<span id="js-rotating"></span></h1>-->
-                                <h1>Cellular Level Simulation Platform</h1>
+                                <h1>Cellular Level Simulation</h1>
                                 <br>
                                 <br>
                                 <p class="p-heading p-x-large"><span id="js-rotating">Build, Reconstruct, Simulate</span>
