--- a/src/html/index.html
+++ b/src/html/index.html
@@ -91,10 +91,11 @@
 							LIVE PAPERS
 						</a>
 					</li>
+
                 <!-- Dropdown Menu -->          
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle page-scroll" 
-                        href="#about" id="navbarDropdown" role="button" 
+                        href="#monitors" id="navbarDropdown" role="button" 
                         aria-haspopup="true" aria-expanded="false">MONITORS</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="hpc-monitor.html"><span class="item-text">HPC MONITOR</span></a>
@@ -306,6 +307,57 @@
 			</div> <!-- end of container -->
 		</div> <!-- end of counter -->
 		<!-- end of about -->
+        
+		<hr style="width:100%;">
+
+		<!-- Monitors -->
+		<div id="monitors" class="basic-1">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6">
+						<div class="text-container">
+							<div class="section-title">MONITORS</div>
+							<h2>
+								Visualize Cellular Level Simulation Tools usage
+                                and HPC systems available resources
+							</h2>
+							<p>
+							<ul>
+								<li>
+                                The Cellular Level Simulation Tools monitor
+                                displays a real-time and historical overview of 
+                                the number of instantiated Use Cases (UCs), 
+                                pageviews, visitors and users; 
+								</li>
+								<li>
+                                The HPC Status Monitor allows a real-time check 
+                                of the availability status of the HPC systems 
+                                accessible from the platform and provides an 
+                                instant snapshot of the resource quotas 
+                                available to the user on each system 
+								</li>
+							</ul>
+							</p>
+						</div> <!-- end of text-container -->
+					</div> <!-- end of col -->
+					<div class="col-lg-3 vertical-center" style="display: flex;align-items: center;">
+						<div class="image-container">
+							<div class="row">
+								<img class="center-block img-fluid" src="../images/small_img2_2.jpeg" alt="alternative">
+							</div>
+						</div> <!-- end of image-container -->
+					</div> <!-- end of col -->
+					<div class="col-lg-3 vertical-center" style="display: flex;align-items: center;">
+						<div class="image-container">
+							<div class="row">
+								<img class="center-block img-fluid" src="../images/small_img2_2.jpeg" alt="alternative">
+							</div>
+						</div> <!-- end of image-container -->
+					</div> <!-- end of col -->
+				</div> <!-- end of row -->
+			</div> <!-- end of container -->
+		</div> <!-- end of basic-1 -->
+		<!-- end of monitors -->
 
 		<hr style="width:100%;">
 
@@ -462,23 +514,25 @@
 								<div class="swiper-button-next"></div>
 								<div class="swiper-button-prev"></div>
 								<!-- end of add arrows -->
-
 							</div> <!-- end of swiper-container -->
 						</div> <!-- end of sliedr-container -->
 						<!-- end of card slider -->
-
 					</div> <!-- end of col -->
 				</div> <!-- end of row -->
 			</div> <!-- end of container -->
 			<br>
 			<br>
 			<div class="text-center">
-				<button type="button" class="text-center btn-solid-lg page-scroll" data-toggle="modal" data-target="#modalVM">PREVIEW</button>
+				<button type="button" class="text-center btn-solid-lg page-scroll" 
+                    data-toggle="modal" data-target="#modalVM">
+                    PREVIEW
+                </button>
 			</div>
 
 
 			<!--Modal: Name-->
-			<div class="modal fade" id="modalVM" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div  class="modal fade" id="modalVM" tabindex="-1" role="dialog" 
+                aria-labelledby="myModalLabel" aria-hidden="true">
 				<div class="modal-dialog modal-lg" role="document">
 
 					<!--Content-->
@@ -488,7 +542,9 @@
 						<div class="modal-body mb-0 p-0">
 
 							<div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-								<iframe class="embed-responsive-item" src="https://humanbrainproject.github.io/hbp-bsp-live-papers/index.html" allowfullscreen></iframe>
+								<iframe class="embed-responsive-item" 
+                                    src="https://humanbrainproject.github.io/hbp-bsp-live-papers/index.html" 
+                                    allowfullscreen></iframe>
 							</div>
 
 						</div>
@@ -624,9 +680,7 @@
 							get feedback to improve the Platform</p>
 							<ul class="list-unstyled li-space-lg">
 								<li><i class="fas fa-envelope"></i>
-									<a href="mailto:support@ebrains.eu">
-										support@ebrains.eu
-									</a>
+                                    support [AT] ebrains.eu
 								</li>
 							</ul>
 						</div> <!-- end of text-container -->
