inserted Live Paper; inserted online use cases sub-menu

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -79,12 +79,17 @@
 							OBJECTIVES
 						</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link page-scroll" href="#ouc" 
-														title="Online Use Cases"  alt="Online Use Cases">
-							OUC
-						</a>
-					</li>
+                    <!-- Dropdown Menu Online Use Cases-->          
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle page-scroll" 
+                            href="#ouc" id="navbarDropdown" role="button" 
+                            aria-haspopup="true" aria-expanded="false" title="Online Use Cases" alt="Online Use Cases">
+                            ONLINE USE CASES</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="online-use-cases.html"><span class="item-text">EXPLORE ALL</span></a>
+                        </div>
+                    </li>
+                    <!-- end of dropdown menu online use cases -->
 					<li class="nav-item">
 						<a class="nav-link page-scroll" href="#live-papers"
 														title="LIVE PAPERS" alt="LIVE PAPERS">
@@ -131,7 +136,7 @@
 						<div class="col-lg-12">
 							<div class="text-container">
 								<p class="p-x-large">EBRAINS</p><!--<span id="js-rotating"></span></h1>-->
-								<h1>Cellular Level Simulation Platform</h1>
+								<h1>Cellular Level Simulation</h1>
 								<br>
 								<br>
 								<p class="p-heading p-x-large"><span id="js-rotating">Build, Reconstruct, Simulate</span>
@@ -343,14 +348,16 @@
 					<div class="col-lg-3 vertical-center" style="display: flex;align-items: center;">
 						<div class="image-container">
 							<div class="row">
-								<img class="center-block img-fluid" src="../images/small_img2_2.jpeg" alt="alternative">
+                                <a href="./online-use-cases.html">
+								<img class="center-block img-fluid" src="../images/monitor_cls.svg" alt="alternative">
+                                </a>
 							</div>
 						</div> <!-- end of image-container -->
 					</div> <!-- end of col -->
 					<div class="col-lg-3 vertical-center" style="display: flex;align-items: center;">
 						<div class="image-container">
 							<div class="row">
-								<img class="center-block img-fluid" src="../images/small_img2_2.jpeg" alt="alternative">
+								<img class="center-block img-fluid" src="../images/monitor_hpc.svg" alt="alternative">
 							</div>
 						</div> <!-- end of image-container -->
 					</div> <!-- end of col -->
