--- a/src/html/monitors.html
+++ b/src/html/monitors.html
@@ -18,7 +18,7 @@
         <meta property="og:type" content="article" />
 
         <!-- Website Title -->
-        <title>Online Use Cases</title>
+        <title>CLS Monitors</title>
 
         <!-- Styles -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -57,7 +57,7 @@
         </div>
         <!-- end of preloader -->
 
-    <div id="includeContent"></div>
+        <div id="includeContent"></div>
 
 
 
@@ -67,7 +67,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>Online Use Cases</h1>
+                        <h1>Monitors</h1>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
             </div> <!-- end of container -->
@@ -81,8 +81,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="breadcrumbs">
-                            <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Online Use Cases</span>
-
+                            <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Monitors</span>
                         </div> <!-- end of breadcrumbs -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -90,54 +89,49 @@
         </div> <!-- end of ex-basic-1 -->
         <!-- end of breadcrumbs -->
 
-
-        <div class="ex-basic-2">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="text-container">
-                            <h3>Online Use Cases</h3>
-                            <!--Accordion wrapper-->
-                            <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
-                                <!-- Accordion card -->
-                                <div class="card">
-                                    <!-- Card header -->
-                                    <div class="card-header" role="tab" id="headingOne1">
-                                        <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne1" aria-expanded="true"
-                                                                                                                  aria-controls="collapseOne1">
-                                            <h5 class="mb-0">
-                                                Trace Analysis <i class="fas fa-angle-down rotate-icon"></i>
-                                            </h5>
-                                        </a>
-                                    </div>
-
-                                    <!-- Card body -->
-                                    <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1" data-parent="#accordionEx">
-                                        <div class="card-body">
-                                            <p><a target="_blank" href="https://hbp-bsp-hhnb.cineca.it/efelg/"><img class="center-block img-fluid" src="../images/feature_extraction.png"></a></p>
-                                            <p><a target="_blank" href="https://lab.ebrains.eu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Flbologna%2Fsynaptic_platicity&urlpath=lab%2Ftree%2Fsynaptic_platicity%2FSynaptic+plasticity.ipynb&branch=master"><img class="center-block img-fluid" src="../images/synaptic_plasticity.png"></a></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+        <!-- cls monitor -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div id="cls-monitor-container" class="embed-responsive embed-responsive-16by9" style="height: 800px">
+                        <iframe src="https://bspmonitors.cineca.it/bsp-monitor/" frameborder="2"
+                                                                                 style="border:2" allowfullscreen></iframe>
                     </div>
-                </div>
-            </div>
+                </div> <!-- end of col -->
+            </div> <!-- enf of row -->
+        </div><!-- end of container -->
+        <!-- end of cls monitor -->
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div id="cls-monitor-container" class="embed-responsive embed-responsive-16by9" style="height: 800px">
+                        <iframe src="https://bspmonitors.cineca.it/hpc-monitor/" frameborder="1"
+                                style="border:1" allowfullscreen></iframe>
+                    </div>
+                </div> <!-- end of col -->
+            </div> <!-- enf of row -->
         </div>
 
-        <div class="copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <p class="p-small"><a href="https://ebrains.eu"></a></p>
-                    </div> <!-- end of col -->
-                </div> <!-- enf of row -->
-            </div> <!-- end of container -->
-        </div> <!-- end of copyright --> 
-        <!-- end of copyright -->
-
-
         <!-- Scripts -->
+		<script src="../js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+		<script src="../js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
+		<script src="../js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+		<script src="../js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
+		<script src="../js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
+		<script src="../js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
+		<script src="../js/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
+		<script src="../js/isotope.pkgd.min.js"></script> <!-- Isotope for filter -->
+		<script src="../js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
+		<script src="../js/scripts.js"></script> <!-- Custom scripts -->
     </body>
 </html>
