updated navigation bar in the online-use-cases page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -103,9 +103,9 @@
                         href="#monitors" id="navbarDropdown" role="button" 
                         aria-haspopup="true" aria-expanded="false">MONITORS</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="hpc-monitor.html"><span class="item-text">HPC MONITOR</span></a>
+                        <a class="dropdown-item" target="_blank" href="https://bspmonitors.cineca.it/hpc-monitor/#"><span class="item-text">HPC MONITOR</span></a>
                         <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="clsp-monitory.html"><span class="item-text">CLSP MONITOR</span></a>
+                        <a class="dropdown-item" target="_blank" href="https://bspmonitors.cineca.it/bsp-monitor"><span class="item-text">CLSP MONITOR</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
@@ -347,9 +347,9 @@
 					</div> <!-- end of col -->
 					<div class="col-lg-3 vertical-center" style="display: flex;align-items: center;">
 						<div class="image-container">
-							<div class="row">
-                                <a href="./online-use-cases.html">
-								<img class="center-block img-fluid" src="../images/monitor_cls.svg" alt="alternative">
+							<div class="row" style="z-index:1">
+                                <a target="_blank" href="https://bspmonitors.cineca.it/bsp-monitor">
+								<img class="center-block img-fluid" style="z-index:3" src="../images/monitor_cls.svg" alt="alternative">
                                 </a>
 							</div>
 						</div> <!-- end of image-container -->
@@ -357,6 +357,7 @@
 					<div class="col-lg-3 vertical-center" style="display: flex;align-items: center;">
 						<div class="image-container">
 							<div class="row">
+                                <a target="_blank" href="https://bspmonitors.cineca.it/hpc-monitor/#">
 								<img class="center-block img-fluid" src="../images/monitor_hpc.svg" alt="alternative">
 							</div>
 						</div> <!-- end of image-container -->
