--- a/src/html/online-use-cases.html
+++ b/src/html/online-use-cases.html
@@ -46,44 +46,84 @@
 
 
         <!-- Navbar -->
-        <nav id="main-navbar" class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
-            <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
+		<nav id="main-navbar" class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
+			<!-- Text Logo - Use this if you don't have a graphic logo -->
+			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
-            <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="https://ebrains.eu/" target="_blank"><img id="eb-logo" class="" src="../images/logos/ebrains_logos_yellow_green-white.png" alt="alternative"></a>
+			<!-- Image Logo -->
+			<a class="navbar-brand logo-image" href="https://ebrains.eu/" target="_blank">
+				<img id="eb-logo" class="" src="../images/logos/ebrains_logos_yellow_green-white.png" alt="alternative">
+			</a>
 
-            <!-- Mobile Menu Toggle Button -->
-            <button id="navbar-toggler-btn" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-awesome fas fa-bars"></span>
-                <span class="navbar-toggler-awesome fas fa-times"></span>
-            </button>
-            <!-- end of mobile menu toggle button -->
+			<!-- Mobile Menu Toggle Button -->
+			<button id="navbar-toggler-btn" class="navbar-toggler" 
+											type="button" data-toggle="collapse" 
+														  data-target="#navbarsExampleDefault" 
+														  aria-controls="navbarsExampleDefault" aria-expanded="false" 
+																								aria-label="Toggle navigation">
+				<span class="navbar-toggler-awesome fas fa-bars"></span>
+				<span class="navbar-toggler-awesome fas fa-times"></span>
+			</button>
+			<!-- end of mobile menu toggle button -->
 
-            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll" href="index.html">HOME <span class="sr-only">(current)</span></a>
+			<div class="collapse navbar-collapse" id="navbarsExampleDefault">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link page-scroll" href="index.html">HOME 
+							<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link page-scroll" href="index.html#objectives"
+														title="OBJECTIVES" alt="OBJECTIVES">
+							OBJECTIVES
+						</a>
+					</li>
+                    <!-- Dropdown Menu Online Use Cases-->          
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle page-scroll" 
+                            href="#ouc" id="navbarDropdown" role="button" 
+                            aria-haspopup="true" aria-expanded="false" title="Online Use Cases" alt="Online Use Cases">
+                            ONLINE USE CASES</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="online-use-cases.html"><span class="item-text">EXPLORE ALL</span></a>
+                        </div>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll" href="index.html#objectives">OUR GOAL</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll" href="index.html#ouc">ONLINE USE CASES</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll" href="index.html#live-papers">LIVE PAPERS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll" href="index.html#whoWeAre">WHO WE ARE</a>
-                    </li>
+                    <!-- end of dropdown menu online use cases -->
+					<li class="nav-item">
+						<a class="nav-link page-scroll" href="index.html#live-papers"
+														title="LIVE PAPERS" alt="LIVE PAPERS">
+							LIVE PAPERS
+						</a>
+					</li>
 
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll" href="index.html#contact">CONTACT</a>
-                    </li>
-                </ul>
-            </div>
-        </nav> <!-- end of navbar -->
+                <!-- Dropdown Menu -->          
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle page-scroll" 
+                        href="index.html#monitors" id="navbarDropdown" role="button" 
+                        aria-haspopup="true" aria-expanded="false">MONITORS</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" target="_blank" href="https://bspmonitors.cineca.it/hpc-monitor/#"><span class="item-text">HPC MONITOR</span></a>
+                        <div class="dropdown-items-divide-hr"></div>
+                        <a class="dropdown-item" target="_blank" href="https://bspmonitors.cineca.it/bsp-monitor"><span class="item-text">CLSP MONITOR</span></a>
+                    </div>
+                </li>
+                <!-- end of dropdown menu -->
+					<li class="nav-item">
+						<a class="nav-link page-scroll" href="index.html#whoWeAre"
+														title ="TEAM" alt="TEAM">
+							TEAM
+						</a>
+					</li>
+
+					<li class="nav-item">
+						<a class="nav-link page-scroll" href="index.html#contact"
+														title="CONTACTS" alt="CONTACTS">
+							CONTACTS
+						</a>
+					</li>
+				</ul>
+			</div>
+		</nav> <!-- end of navbar -->
         <!-- end of navbar -->
 
         <!-- Header -->
