--- a/src/html/online-use-cases.html
+++ b/src/html/online-use-cases.html
@@ -32,8 +32,9 @@
 .uc-panel{
     margin:10px;   
     border: 1px solid;
-    padding: 10px;
-    box-shadow: 3px 8px #AAAAAA;
+    border-color: #BBBBBB;
+    padding: 8px;
+    box-shadow: 5px 10px 8px #AAAAAA;
 }
         .uc-icons{
             width:200px;
