changed page title

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -136,7 +136,8 @@
 						<div class="col-lg-12">
 							<div class="text-container">
 								<p class="p-x-large">EBRAINS</p><!--<span id="js-rotating"></span></h1>-->
-								<h1>Cellular Level Simulation</h1>
+								<p class="p-x-large">Cellular Level Simulation</p>
+								<h1>NEURON Workflows and Use Cases</h1>
 								<br>
 								<br>
 								<p class="p-heading p-x-large"><span id="js-rotating">Build, Reconstruct, Simulate</span>
