(WIP) Embed wizard

--- a/src/html/online-use-cases.html
+++ b/src/html/online-use-cases.html
@@ -177,127 +177,15 @@
                             <!--
                                 <p><a target="_blank" href="https://lab.ebrains.eu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Flbologna%2Fsynaptic_platicity&urlpath=lab%2Ftree%2Fsynaptic_platicity%2FSynaptic+plasticity.ipynb&branch=master"><img class="center-block img-fluid" src="../images/synaptic_plasticity.png"></a></p>
                             -->
-                            <div class="accordion" id="accordionExample">
-                                <div class="card">
-                                    <div class="card-header" id="headingOne">
-                                        <h2 class="mb-0">
-                                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                Trace Analysis
-                                            </button>
-                                        </h2>
-                                    </div>
-
-                                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                                        <a href="https://hbp-bsp-hhnb.cineca.it/efelg/" target="_blank" style="text-decoration:none">
-                                            <div class="card-body">
-                                                <!-- Feature Extraction start -->
-                                                <div class="uc-panel">
-                                                    <div class="row">
-                                                        <div class="col-lg-3" style="">
-                                                            <img class="uc-icons" src="https://raw.githubusercontent.com/antonelepfl/usecases/dev/src/assets/images/features.png" >
-                                                        </div>
-                                                            <div class="col-lg-9">
-                                                                <h4>Feature Extraction</h4>
-                                                                <br>
-                                                                Extracts electrophysiological features; traces can be from the EBRAINS KG or uploaded
-                                                                <br>
-                                                                Contributors: Luca Leonardo Bologna (lucaleonardo.bologna@cnr.it), Roberto Smiriglia (roberto.smiriglia@ibf.cnr.it)
-                                                            </div>
-                                                    </div>
-                                                    <!-- Feature Extraction end -->
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div class="card-header" id="headingTwo">
-                                        <h2 class="mb-0">
-                                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                Single Cell In Silico Experiments
-                                            </button>
-                                        </h2>
-                                    </div>
-                                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                                        <a href="https://blue-naas-bsp-epfl.apps.hbp.eu/#/model/dSTUT214_L6_NBC_6_tkb050507a1_ch1_bc_b_yw_60x_1_-_Scale_x1.000_y0.975_z1.000_-_Clone_4" target="_blank" style="text-decoration:none">
-                                            <div class="card-body">
-                                                <!-- BlueNaas start -->
-                                                <div class="uc-panel">
-                                                    <div class="row">
-                                                        <div class="col-lg-3" style="">
-                                                            <img class="uc-icons" src="https://raw.githubusercontent.com/antonelepfl/usecases/dev/src/assets/images/l5pc_release_responses-eps.jpg" >
-                                                        </div>
-                                                            <div class="col-lg-9">
-                                                                <h4>Single cell in silico experiments under current clamp</h4>
-                                                                <br>
-                                                                Contributors: Genrich Ivaska (genrich.ivaska@epfl.ch)
-                                                            </div>
-                                                    </div>
-                                                    <!-- BlueNaas end -->
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                                <!-- Small Circtuit start -->
-                                <div class="card">
-                                    <div class="card-header" id="headingThree">
-                                        <h2 class="mb-0">
-                                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                In silico experiments of a small circuit extracted from large scale detailed network models
-                                            </button>
-                                        </h2>
-                                    </div>
-                                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                                        <a href="https://pair-recording-bsp-epfl.apps.hbp.eu/circuits/rat-ca1" target="_blank" style="text-decoration:none">
-                                            <div class="card-body">
-                                                <div class="uc-panel">
-                                                    <div class="row">
-                                                        <div class="col-lg-3" style="">
-                                                            <img class="uc-icons" src="https://raw.githubusercontent.com/antonelepfl/testvue/master/imgtest/pair_recording.png" >
-                                                        </div>
-                                                            <div class="col-lg-9">
-                                                                <h4>In silico experiments of a small circuit extracted from large scale detailed network models</h4>
-                                                                <br>
-                                                                Contributors: Stefano Antonel (stefano.antonel@epfl.ch)
-                                                            </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                                <!-- Small Circuit end -->
-                                <!-- Small Circtuit start -->
-                                <div class="card">
-                                    <div class="card-header" id="headingFour">
-                                        <h2 class="mb-0">
-                                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                                Brain Area Circuit InSilico Experiments
-                                            </button>
-                                        </h2>
-                                    </div>
-                                    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
-                                        <a href="https://simulation-launcher-bsp-epfl.apps.hbp.eu/index.html#/circuits/hippo_hbp_sa_full_ca1" target="_blank" style="text-decoration:none">
-                                            <div class="card-body">
-                                                <div class="uc-panel">
-                                                    <div class="row">
-                                                        <div class="col-lg-3" style="">
-                                                            <img class="uc-icons" src="https://raw.githubusercontent.com/antonelepfl/usecases/dev/src/assets/images/hippocampusConnections.png">
-                                                        </div>
-                                                            <div class="col-lg-9">
-                                                                <h4>Hippocampus</h4>
-                                                                <br>
-                                                                Contributors: Stefano Antonel (stefano.antonel@epfl.ch)
-                                                            </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                                <!-- Small Circuit end -->
-                            </div>
+                            <link rel='stylesheet' href='/ebrains-sim-cl-dev/wizard/global.css'>
+                            <link rel='stylesheet' href='/ebrains-sim-cl-dev/wizard/build/style_bundle.css'>
+                    
+                            <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
+                            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
+                            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
+                            <script defer src='/ebrains-sim-cl-dev/wizard/build/bundle.js'></script>
+                            
+                            <div id="onlineUsecasesAppContainer"></div>
                         </div>
                     </div>
                 </div>
